<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedactorActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_view_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_surname"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_patronymic"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvSurname"
        app:layout_constraintTop_toBottomOf="@+id/tvSurname" />

    <TextView
        android:id="@+id/tvGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_group"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/tvPatronymic" />

    <TextView
        android:id="@+id/tvCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_course"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvGroup"
        app:layout_constraintTop_toBottomOf="@+id/tvGroup" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <EditText
        android:id="@+id/edtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/tvSurname"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/tvPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/edtSurname" />

    <EditText
        android:id="@+id/edtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/tvGroup"
        app:layout_constraintTop_toBottomOf="@+id/edtPatronymic" />

    <EditText
        android:id="@+id/edtCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tvCourse"
        app:layout_constraintTop_toBottomOf="@+id/edtGroup" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCourse" />

</androidx.constraintlayout.widget.ConstraintLayout>