<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="184dp"
        android:layout_height="204dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="108dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/tvMain"
        app:layout_constraintTop_toTopOf="@+id/tvMain"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/btPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:rotation="180"
        app:layout_constraintEnd_toStartOf="@+id/tvMain"
        app:layout_constraintTop_toTopOf="@+id/tvMain"
        app:srcCompat="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="236dp"
        android:backgroundTint="#52AE2A"
        android:text="@string/add_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/btChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#28A2DC"
        android:text="@string/change_button"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btAdd"
        app:layout_constraintTop_toTopOf="@+id/btAdd" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#DA3131"
        android:text="@string/delete_button"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btChange"
        app:layout_constraintTop_toTopOf="@+id/btChange" />
</androidx.constraintlayout.widget.ConstraintLayout>